--- a/Birds/code/config.json
+++ b/Birds/code/config.json
@@ -114,7 +114,24 @@
 {"radar": "KPUX", "n_estimators": "100"}
 {"radar": "KRAX", "n_estimators": "70"}
 {"radar": "KRGX", "n_estimators": "80"}
-{"radar": "KABX", "n_estimators": "120"}
-{"radar": "KARX", "n_estimators": "100"}
-{"radar": "KBIS", "n_estimators": "100"}
-{"radar": "KBUF", "n_estimators": "120"}
+{"radar": "KRIW", "n_estimators": "100"}
+{"radar": "KRLX", "n_estimators": "80"}
+{"radar": "KRTX", "n_estimators": "100"}
+{"radar": "KSFX", "n_estimators": "60"}
+{"radar": "KSGF", "n_estimators": "90"}
+{"radar": "KSHV", "n_estimators": "40"}
+{"radar": "KSJT", "n_estimators": "80"}
+{"radar": "KSOX", "n_estimators": "80"}
+{"radar": "KSRX", "n_estimators": "100"}
+{"radar": "KTBW", "n_estimators": "40"}
+{"radar": "KTFX", "n_estimators": "70"}
+{"radar": "KTLH", "n_estimators": "70"}
+{"radar": "KTLX", "n_estimators": "100"}
+{"radar": "KTWX", "n_estimators": "60"}
+{"radar": "KTYX", "n_estimators": "100"}
+{"radar": "KUDX", "n_estimators": "30"}
+{"radar": "KUEX", "n_estimators": "70"}
+{"radar": "KVNX", "n_estimators": "70"}
+{"radar": "KVTX", "n_estimators": "60"}
+{"radar": "KVWX", "n_estimators": "30"}
+{"radar": "KYUX", "n_estimators": "90"}
